# rustup-toolchain-install-master

./: .travis.yml  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
src/: main.rs
