[package]
name = "rustup-toolchain-install-master"
version = "1.8.0"
authors = ["kennytm <kennytm@gmail.com>"]
categories = ["development-tools"]
edition = "2018"
keywords = ["rustup"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kennytm/rustup-toolchain-install-master"
description = "Install master rustc toolchain into rustup"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "kennytm/rustup-toolchain-install-master" }
is-it-maintained-issue-resolution = { repository = "kennytm/rustup-toolchain-install-master" }
is-it-maintained-open-issues = { repository = "kennytm/rustup-toolchain-install-master" }

[dependencies]
ansi_term = "0.12"
anyhow = "1.0.31"
home = "0.5"
pbr = "1.1"
remove_dir_all = "0.8"
reqwest = { version = "0.11", features = ["blocking", "gzip"]}
clap = { version = "3.0", features = ["derive"] }
tar = "0.4"
tee = "0.1"
tempfile = "3"
xz2 = "0.1"
