[package]
name = "rustup-toolchain-install-master"
version = "1.10.0"
authors = ["kennytm <kennytm@gmail.com>"]
categories = ["development-tools"]
edition = "2024"
keywords = ["rustup"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kennytm/rustup-toolchain-install-master"
description = "Install master rustc toolchain into rustup"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
colored = "3"
anyhow = "1.0.31"
home = "0.5"
pbr-120 = "1.1.3"
remove_dir_all = "1"
reqwest = { version = "0.12", features = ["blocking", "gzip"]}
clap = { version = "4.0", features = ["derive", "cargo"] }
tar = "0.4"
tee = "0.1"
tempfile = "3"
xz2 = "0.1"
